# Criva

./: CMakeLists.txt
include/calculator/: arithmetic_command.h  calculator.h
src/: CMakeLists.txt  arithmetic_command.cpp  calculator.cpp  main.cpp
tests/: CMakeLists.txt  test_calculator.cpp
